--- a/styles/_variables.css
+++ b/styles/_variables.css
@@ -6,6 +6,8 @@
     --yellow-light-color: #E2B777;
     --blue-color: #0D81C2;
     --blue-light-color: #41A3D9;
+    --gray-color: #3F4A50;
+    --white-color: #F9F9F9;
 }
 
 @font-face {
