--- a/styles/index.css
+++ b/styles/index.css
@@ -114,10 +114,17 @@
     text-align: center;
 }
 
-.start-block-button button{
+.start-block-button > button{
     height: 43px;
     font-size: 14px;
 }
+.start-block-button > button a{
+    color: white;
+}
+.start-block-button > button a:hover{
+    color: white;
+}
+
 
 
 .courses-title {
@@ -126,8 +133,9 @@
     color: var(--green-color);
 }
 
-.course {
+.course-block {
     display: flex;
+    height: 100%;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -173,7 +181,7 @@
     text-align: center;
 }
 .bonus-title-main, .bonus-title-name{
-    font-size: 32px;
+    font-size: 24px;
     color: var(--green-dark-color);
 }
 .bonus-title-main{
@@ -206,7 +214,7 @@
 
 .bonus-form{
     background-color: var(--green-color);
-    padding: 40px;
+    padding: 10px;
     border-radius: 10px;
 }
 
@@ -245,6 +253,57 @@
     font-size: 18px;
 }
 
+.study-info{
+}
+
+.study-info-title{
+    font-family: "Montserrat Bold";
+    color: var(--green-dark-color);
+    font-size: 24px;
+}
+
+.study-info-block{
+    height: 100%;
+    padding: 20px;
+    text-align: center;
+    background-color: var(--blue-color);
+    border-radius: 10px;
+}
+
+.study-info-block-title{
+    font-family: "Montserrat Bold";
+    color: white;
+    font-size: 18px;
+    word-break: break-word;
+}
+
+.study-info-block-text{
+    font-family: "OpenSans Regular";
+    color: white;
+    font-size: 16px;
+    word-break: break-word;
+}
+
+.carousel{
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.carousel-item img {
+    object-fit: cover;
+    min-height: auto;
+    max-height: 600px;
+}
+
+
+.reviews-title{
+    font-family: "Montserrat Bold";
+    color: var(--green-dark-color);
+    font-size: 40px;
+}
+
+
+
 /* Small */
 @media (min-width: 576px) {
     .start-block-button button{
@@ -259,6 +318,9 @@
     .courses-title {
         font-size: 32px;
     }
+    .bonus-title-main, .bonus-title-name{
+        font-size: 26px;
+    }
     .bonus-comment p {
         font-size: 20px;
     }
@@ -267,6 +329,13 @@
     }
     .bonus-text-info{
         font-size: 20px;
+    }
+    .bonus-form {
+        padding: 20px;
+    }
+
+    .reviews-title{
+        font-size: 42px;
     }
 }
 /* Medium */
@@ -279,6 +348,9 @@
     .courses-title {
         font-size: 42px;
     }
+    .bonus-title-main, .bonus-title-name{
+        font-size: 30px;
+    }
     .bonus-comment p {
         font-size: 22px;
     }
@@ -288,11 +360,26 @@
     .bonus-text-info{
         font-size: 20px;
     }
+    .bonus-form {
+        padding: 30px;
+    }
     .school-info-title{
         font-size: 40px;
     }
     .school-info-text{
         font-size: 22px;
+    }
+    .study-info-title{
+        font-size: 26px;
+    }
+    .study-info-block-title{
+        font-size: 24px;
+    }
+    .study-info-block-text{
+        font-size: 18px;
+    }
+    .reviews-title{
+        font-size: 50px;
     }
 
 }
@@ -301,7 +388,7 @@
     .start-block{
         height: 615px;
     }
-    start-block-title > p{
+    .start-block-title > p{
         font-size: 24px;
     }
     .start-block-text > p{
@@ -318,11 +405,23 @@
     .courses-title {
         font-size: 52px;
     }
+    .bonus-form {
+        padding: 40px;
+    }
     .school-info-title{
         font-size: 48px;
     }
     .school-info-text{
         font-size: 24px;
+    }
+    .study-info-title{
+        font-size: 34px;
+    }
+    .study-info-block-title{
+        font-size: 22px;
+    }
+    .study-info-block-text{
+        font-size: 16px;
     }
 
 }
@@ -347,6 +446,9 @@
     .courses-title {
         font-size: 60px;
     }
+    .bonus-title-main, .bonus-title-name{
+        font-size: 32px;
+    }
     .bonus-comment p {
         font-size: 24px;
     }
@@ -361,6 +463,18 @@
     }
     .school-info-text{
         font-size: 28px;
+    }
+    .study-info-title{
+        font-size: 36px;
+    }
+    .study-info-block-title{
+        font-size: 24px;
+    }
+    .study-info-block-text{
+        font-size: 18px;
+    }
+    .reviews-title{
+        font-size: 54px;
     }
 
 }
@@ -378,6 +492,17 @@
     .school-info-text{
         font-size: 30px;
     }
+    .study-info-title{
+        font-size: 40px;
+    }
+    .study-info-block-title{
+        font-size: 28px;
+    }
+    .study-info-block-text{
+        font-size: 20px;
+    }
+    .reviews-title{
+        font-size: 56px;
+    }
 
 }
-
