--- a/styles/index.css
+++ b/styles/index.css
@@ -253,6 +253,11 @@
     color: var(--gray-color);
     font-size: 18px;
 }
+.school-info-image{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
 
 .study-info{
 }
